# server.js
@@ -19,6 +19,7 @@ app.use('/accounts', require('./accounts/accounts.controller'));
 app.use('/shippings', require('./shippings/shippings.controller'));
 app.use('/reports', require('./reports/reports.controller'));
 app.use('/jobs', require('./jobs/jobs.controller'));
+app.use('/tenants', require('./tenants/tenants.controller'));
 
 // swagger docs route
 app.use('/api-docs', require('_helpers/swagger'));
